--- a/index.html
+++ b/index.html
@@ -483,17 +483,17 @@
       </div>
     </div>
     <!-- sponser -->
-    <div class="sponsor">
+    <marquee class="sponsor">
         <div class="container">
             <img src="image/Logo's.png" alt="sponser">
         </div>
-    </div>
+    </marquee>
     <footer>
         <div class="container">
-            <div class="box">
-                <div class="sup">
-                    <img src="images/Home/Basket-2.png" alt="Basket">
-                    <div class="info">
+            <div class="footer__box">
+                <div class="footer__sup">
+                    <img src="image/Basket.png" alt="Basket">
+                    <div class="footer__content">
                         <h2>Subscribe To Newsletter</h2>
                         <form>
                             <input type="email" placeholder="Enter Your Email Address" id="email">
