--- a/about.html
+++ b/about.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style/all.min.css" />
     <link rel="stylesheet" href="style/normalize.css" />
-    <link rel="stylesheet" href="style/style.css" />
+    <link rel="stylesheet" href="style/about.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;700&family=Jomhuria&family=Nunito+Sans:ital,wght@0,200;0,600;0,700;0,900;1,200;1,900&family=Open+Sans:wght@300;400;700&family=Poppins:ital,wght@0,100;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Public+Sans:wght@300;400;700&family=Red+Hat+Text:wght@700&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap"
       rel="stylesheet"
     />
-    <title>Groxi store</title>
+    <title>Groxi store => About Us</title>
   </head>
   <body>
     <!-- start navbar -->
