--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
           <a href=""><img src="image/LogoPage.png" alt="" /></a>
           <nav class="nav__links">
             <ul class="links__item">
-              <li><a href="">Home</a></li>
-              <li><a href="">About</a></li>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="about.html">About</a></li>
               <li><a href="">Shope</a></li>
               <li><a href="">Page</a></li>
               <li><a href="">Blog</a></li>
