add landing page for about

--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style/all.min.css" />
     <link rel="stylesheet" href="style/normalize.css" />
+    <link rel="stylesheet" href="style/global.css">
     <link rel="stylesheet" href="style/about.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -63,5 +64,47 @@
         <a href="#" class="fas fa-blog"></a>
         <a href="#" class="fa-solid fa-address-book"></a>
     </nav>
+    <!-- start featurePrice -->
+    <div class="featurePrice">
+      <div class="container">
+        <img src="image/human.png" alt="priceFeature">
+        <div class="featurePrice__text">
+            <h2>WE Give The Lowest Price on Grocery Items</h2>
+            <p>Neque porro quisquam est aui dolorem iesum ruia dolor
+                sit amet, consectetur, adipisci velit, sed quia non numua
+                eius modi tempora incidunt ut labore et dolore magnam
+                volutatem exercitationem ullam.</p>
+            <p class="p-s">Quis autem vel eum iure reprehenderit aui in ea voluptae
+                velit esse quam nihil molestiae consequatur, vel illum rui
+                dolorem eum fugiat quo voluptas excepteur deserunt
+                veniam adipisicing do adipisicing adipisicing proident
+                esse aud irure commodo mollit voluptate irure alorem
+                consequat ullamco do laboris.</p>
+        </div>
+      </div>
+    </div>
+        <!-- start Our Vision -->
+        <div class="our">
+          <div class="container">
+              <div class="box">
+                  <img src="image/hand.png" alt="ourVision">
+                  <h2>Our Vision</h2>
+                  <p>Neque porro quisquam est aui dolorem iesum ruia
+                      sit amet, consectetur, adipisci velit, sed quia non
+                      eius modi tempora incidunt ut labore et dolore ma
+                      volutatem exercitationem ullam.</p>
+                  <a href="erroe.html" class="btn">Shop Now</a>
+              </div>
+              <div class="box">
+                  <img src="image/arrow.png" alt="OurGoal">
+                  <h2>Our Goal</h2>
+                  <p>Neque porro quisquam est aui dolorem iesum ruia
+                      sit amet, consectetur, adipisci velit, sed quia non
+                      eius modi tempora incidunt ut labore et dolore ma
+                      volutatem exercitationem ullam.</p>
+                  <a href="erroe.html" class="btn">Shop Now</a>
+              </div>
+          </div>
+      </div>
   </body>
 </html>
