--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     />
     <link rel="stylesheet" href="style/all.min.css" />
     <link rel="stylesheet" href="style/normalize.css" />
-    <link rel="stylesheet" href="style/style.css" />
+    <link rel="stylesheet" href="style/global.css">
+    <link rel="stylesheet" href="style/home.css" />
     <title>Groxi store</title>
   </head>
   <body>
@@ -26,10 +27,10 @@
             <ul class="links__item">
               <li><a href="index.html">Home</a></li>
               <li><a href="about.html">About</a></li>
-              <li><a href="">Shope</a></li>
-              <li><a href="">Page</a></li>
-              <li><a href="">Blog</a></li>
-              <li><a href="">Contact</a></li>
+              <li><a href="shope.html">Shope</a></li>
+              <li><a href="page.html">Page</a></li>
+              <li><a href="blog.html">Blog</a></li>
+              <li><a href="contact.html">Contact</a></li>
             </ul>
             <div class="nav__icons">
               <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
