finish about page

--- a/about.html
+++ b/about.html
@@ -106,5 +106,309 @@
               </div>
           </div>
       </div>
+      <!-- start video  -->
+      <div class="video">
+        <div class="container">
+            <div class="video__box">
+                <video autoplay muted loop>
+                    <source src="image/videoFood.mp4">
+                </video>
+                <img src="image/iconYoutube.png" alt="PlayIcon">
+            </div>
+        </div>
+    </div>
+    <!-- finish Page -->
+    <div class="featuer">
+      <div class="container">
+        <div class="featuer__col">
+          <div class="featuer__box">
+            <img src="image/medal.png" alt="feature" />
+            <h3>Quality Products</h3>
+            <p>
+              Aui dolorem iesum ruia dolor sit amet, consectetur, adipisci eius
+              modi incidunt
+            </p>
+          </div>
+          <div class="featuer__box">
+            <img src="image/bikeDelivery.png" alt="feature" />
+            <h3>Fast Delivery</h3>
+            <p>
+              Aui dolorem iesum ruia dolor sit amet, consectetur, adipisci eius
+              modi incidunt
+            </p>
+          </div>
+        </div>
+        <div class="featuer__col">
+          <div class="featuer__box">
+            <img src="image/bagFruites.png" alt="feature" class="img-app" />
+          </div>
+          <div class="featuer__box">
+            <a href="erroe.html" class="btn">Shop Now</a>
+          </div>
+        </div>
+        <div class="featuer__col">
+          <div class="featuer__box">
+            <img src="image/bagshop.png" alt="feature" />
+            <h3>Online Order</h3>
+            <p>
+              Aui dolorem iesum ruia dolor sit amet, consectetur, adipisci eius
+              modi incidunt
+            </p>
+          </div>
+          <div class="featuer__box">
+            <img src="image/contact.png" alt="feature" />
+            <h3>24/7 Service</h3>
+            <p>
+              Aui dolorem iesum ruia dolor sit amet, consectetur, adipisci eius
+              modi incidunt
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="best-seller">
+      <div class="container">
+        <div class="main-title">
+          <span>Best Seller</span>
+          <h2>Feature Products</h2>
+        </div>
+        <ul class="best-seller__nav">
+          <li data-prod=".All" class="active">All</li>
+          <li data-prod=".Food">Food</li>
+          <li data-prod=".Fruits">Fruits</li>
+          <li data-prod=".Health">Health</li>
+          <li data-prod=".Meat">Meat</li>
+          <li data-prod=".Dairy">Dairy</li>
+        </ul>
+        <div class="best-seller__content">
+          <div class="box">
+            <div class="fav"><i class="fa-solid fa-heart"></i></div>
+            <div class="img">
+              <img src="image/Bread.png" alt="trending" />
+            </div>
+            <div class="info">
+              <div class="stars">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-regular fa-star"></i>
+                <i class="fa-regular fa-star"></i>
+              </div>
+              <h3>Fresh Bread</h3>
+              <p><del>$15</del> $12</p>
+              <a href="erroe.html" class="btn">Add To Card</a>
+            </div>
+          </div>
+          <div class="box">
+            <div class="fav"><i class="fa-solid fa-heart"></i></div>
+            <div class="img">
+              <img src="image/Pepper.png" alt="trending" />
+            </div>
+            <div class="info">
+              <div class="stars">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-regular fa-star"></i>
+                <i class="fa-regular fa-star"></i>
+              </div>
+              <h3>Red Pepper</h3>
+              <p><del>$20</del> $15</p>
+              <a href="erroe.html" class="btn">Add To Card</a>
+            </div>
+          </div>
+          <div class="box">
+            <div class="fav"><i class="fa-solid fa-heart"></i></div>
+            <div class="img">
+              <img src="image/Orange.png" alt="trending" />
+            </div>
+
+            <div class="info">
+              <div class="stars">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-regular fa-star"></i>
+                <i class="fa-regular fa-star"></i>
+              </div>
+              <h3>Orange Beverage</h3>
+              <p><del>$30</del> $20</p>
+              <a href="erroe.html" class="btn">Add To Card</a>
+            </div>
+          </div>
+          <div class="box">
+            <div class="fav"><i class="fa-solid fa-heart"></i></div>
+            <div class="img">
+              <img src="image/Eggs.png" alt="trending" />
+            </div>
+
+            <div class="info">
+              <div class="stars">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-regular fa-star"></i>
+                <i class="fa-regular fa-star"></i>
+              </div>
+              <h3>Dozen Egg</h3>
+              <p><del>$15</del> $12</p>
+              <a href="erroe.html" class="btn">Add To Card</a>
+            </div>
+          </div>
+          <div class="box">
+            <div class="fav"><i class="fa-solid fa-heart"></i></div>
+            <div class="img">
+              <img src="image/Oil.png" alt="trending" />
+            </div>
+
+            <div class="info">
+              <div class="stars">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-regular fa-star"></i>
+                <i class="fa-regular fa-star"></i>
+              </div>
+              <h3>Cooking Oil</h3>
+              <p><del>$20</del> $15</p>
+              <a href="erroe.html" class="btn">Add To Card</a>
+            </div>
+          </div>
+          <div class="box">
+            <div class="fav"><i class="fa-solid fa-heart"></i></div>
+            <div class="img">
+              <img src="image/bottle.png" alt="trending" />
+            </div>
+
+            <div class="info">
+              <div class="stars">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-regular fa-star"></i>
+                <i class="fa-regular fa-star"></i>
+              </div>
+              <h3>Body Lotion</h3>
+              <p><del>$30</del> $20</p>
+              <a href="erroe.html" class="btn">Add To Card</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- start testimonial -->
+    <div class="testimonial">
+      <div class="main-title">
+        <span>testimonial</span>
+        <h2>What Our Customer Saying</h2>
+      </div>
+      <div class="testimonial__content">
+        <div class="container">
+          <div class="testimonial__box">
+            <i class="fa-solid fa-quote-left quot"></i>
+            <p>
+              ”Quisquam est, qui dolorem ipsum quia dolor sit consectetur
+              adipisci velit sed quia non numqua eius modi tempora incidunt ut
+              labore et dolore magnam aliquam quaerat voluptatem repudia sint et
+              molestiae”
+            </p>
+            <div class="testimonial__stars">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+            </div>
+            <h3>Alina Parker <span> Ceo, GTD</span></h3>
+          </div>
+          <div class="testimonial__box">
+            <i class="fa-solid fa-quote-left quot"></i>
+            <p>
+              ”Exercitationem ullam corporis suscipit laborio nisi ut aliquid ex
+              ea commodi consequatur uis autem vel eum iure reprehenderit qui in
+              ea vou velit esse quam nihil molestiae consequatur, vel illum qui
+              dolorem eum fugiat”
+            </p>
+            <div class="testimonial__stars">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+            </div>
+            <h3>Kevin Andrew <span> Manager,Rex</span></h3>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- sponser -->
+    <marquee class="sponsor">
+        <div class="container">
+            <img src="image/Logo's.png" alt="sponser">
+        </div>
+    </marquee>
+    <footer>
+        <div class="container">
+            <div class="footer__box">
+                <div class="footer__sup">
+                    <img src="image/Basket.png" alt="Basket">
+                    <div class="footer__content">
+                        <h2>Subscribe To Newsletter</h2>
+                        <form>
+                            <input type="email" placeholder="Enter Your Email Address" id="email">
+                            <input type="submit" value="SUBSCRIBE NOW">
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer">
+            <div class="container">
+                <div class="col col-1">
+                    <h4>Store Location</h4>
+                    <span class="bold">Address:</span>
+                    <span>121 King Street Melbourne,3000,<br>
+                        Australia</span>
+                    <span class="bold">Email:</span>
+                    <span>info@groxistore.com</span>
+                    <span class="bold">Phone:</span>
+                    <span>+1 23 45 6789</span>
+                </div>
+                <div class="col">
+                    <h4>Usefull Links</h4>
+                    <ul>
+                        <li><a href="about.html">About us</a></li>
+                        <li><a href="blog.html">Blog</a></li>
+                        <li><a href="erroe.html">Check out</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="erroe.html">Service</a></li>
+                        <li><a href="shop.html">Shop</a></li>
+                    </ul>
+                </div>
+                <div class="col">
+                    <h4>Categories</h4>
+                    <ul>
+                        <li><a href="erroe.html">Fruits & Vegetable</a></li>
+                        <li><a href="erroe.html">Dairy Products</a></li>
+                        <li><a href="erroe.html">Package Foods</a></li>
+                        <li><a href="erroe.html">Beverage</a></li>
+                        <li><a href="erroe.html">Health & Wellness</a></li>
+                        <li><a href="erroe.html">Meat Varieties</a></li>
+                    </ul>
+                </div>
+                <div class="col">
+                    <h4>Opening Hours</h4>
+                    <ul>
+                        <li><a href="erroe.html" class="bold">Monday - Saturday</a></li>
+                        <li><a href="erroe.html">12.00 - 14.45</a></li>
+                        <li><a href="erroe.html" class="bold">Sunday - Thursday</a></li>
+                        <li><a href="erroe.html">17.30 - 00.00</a></li>
+                        <li><a href="erroe.html" class="bold">Friday - Saturday</a></li>
+                        <li><a href="erroe.html">17.30 - 00.00</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
   </body>
 </html>
