[home] add menu by js

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               <li><a href="blog.html">Blog</a></li>
               <li><a href="contact.html">Contact</a></li>
             </ul>
-            <div class="nav__icons">
+            <div class="nav__icons" style="right: 105%;">
               <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
               <a href="#" id="login-btn"><i class="fa-solid fa-user"></i></a>
               <a href=""><i class="fa-solid fa-heart"></i></a>
@@ -552,5 +552,6 @@
             </div>
         </div>
     </footer>
+    <script src="script/main.js"></script>
   </body>
 </html>
