[Home] add filter for section best-saller by js

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
               <a href="erroe.html" class="btn">Add To Card</a>
             </div>
           </div>
-          <div class="box">
+          <div class="box ">
             <div class="fav"><i class="fa-solid fa-heart"></i></div>
             <div class="img">
               <img src="image/Broccoli.png" alt="" />
@@ -315,15 +315,15 @@
           <h2>Feature Products</h2>
         </div>
         <ul class="best-seller__nav">
-          <li data-prod=".All" class="active">All</li>
-          <li data-prod=".Food">Food</li>
-          <li data-prod=".Fruits">Fruits</li>
-          <li data-prod=".Health">Health</li>
-          <li data-prod=".Meat">Meat</li>
-          <li data-prod=".Dairy">Dairy</li>
+          <li data-product=".All" class="active">All</li>
+          <li data-product=".Food">Food</li>
+          <li data-product=".Fruits">Fruits</li>
+          <li data-product=".Health">Health</li>
+          <li data-product=".Meat">Meat</li>
+          <li data-product=".Dairy">Dairy</li>
         </ul>
         <div class="best-seller__content">
-          <div class="box">
+          <div class="box hot All Food">
             <div class="fav"><i class="fa-solid fa-heart"></i></div>
             <div class="img">
               <img src="image/Bread.png" alt="trending" />
@@ -341,7 +341,7 @@
               <a href="erroe.html" class="btn">Add To Card</a>
             </div>
           </div>
-          <div class="box">
+          <div class="box Food All">
             <div class="fav"><i class="fa-solid fa-heart"></i></div>
             <div class="img">
               <img src="image/Pepper.png" alt="trending" />
@@ -359,7 +359,7 @@
               <a href="erroe.html" class="btn">Add To Card</a>
             </div>
           </div>
-          <div class="box">
+          <div class="box hot Fruits Health All">
             <div class="fav"><i class="fa-solid fa-heart"></i></div>
             <div class="img">
               <img src="image/Orange.png" alt="trending" />
@@ -378,7 +378,7 @@
               <a href="erroe.html" class="btn">Add To Card</a>
             </div>
           </div>
-          <div class="box">
+          <div class="box Food All ">
             <div class="fav"><i class="fa-solid fa-heart"></i></div>
             <div class="img">
               <img src="image/Eggs.png" alt="trending" />
@@ -397,13 +397,13 @@
               <a href="erroe.html" class="btn">Add To Card</a>
             </div>
           </div>
-          <div class="box">
+          <div class="box hot Health All">
             <div class="fav"><i class="fa-solid fa-heart"></i></div>
             <div class="img">
               <img src="image/Oil.png" alt="trending" />
             </div>
 
-            <div class="info">
+            <div class="info hot">
               <div class="stars">
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
@@ -416,7 +416,7 @@
               <a href="erroe.html" class="btn">Add To Card</a>
             </div>
           </div>
-          <div class="box">
+          <div class="box All Health">
             <div class="fav"><i class="fa-solid fa-heart"></i></div>
             <div class="img">
               <img src="image/bottle.png" alt="trending" />
