--- a/shope.html
+++ b/shope.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="style/all.min.css" />
     <link rel="stylesheet" href="style/normalize.css" />
     <link rel="stylesheet" href="style/global.css">
-    <link rel="stylesheet" href="style/about.css" />
+    <link rel="stylesheet" href="style/shope.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;700&family=Jomhuria&family=Nunito+Sans:ital,wght@0,200;0,600;0,700;0,900;1,200;1,900&family=Open+Sans:wght@300;400;700&family=Poppins:ital,wght@0,100;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Public+Sans:wght@300;400;700&family=Red+Hat+Text:wght@700&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap"
       rel="stylesheet"
     />
-    <title>Groxi store => About Us</title>
+    <title>Groxi store => Shop</title>
   </head>
   <body>
     <!-- start navbar -->
@@ -30,11 +30,11 @@
               <li><a href="shope.html">Shope</a></li>
               <li><a href="page.html">Page</a></li>
               <li><a href="blog.html">Blog</a></li>
-              <li><a href="contact">Contact</a></li>
+              <li><a href="contact.html">Contact</a></li>
             </ul>
             <div class="nav__icons">
               <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
-              <a href="#" id="login-btn"><i class="fa-solid fa-user"></i></a>
+              <a href="#"><i class="fa-solid fa-user"></i></a>
               <a href=""><i class="fa-solid fa-heart"></i></a>
               <a href=""><i class="fa-solid fa-cart-shopping"></i><span>0</span></a>
             </div>
@@ -46,9 +46,9 @@
         <div class="header__constant-title">
             <span><a href="#">Home</a>
                  → 
-                <a href="#">About</a>
+                <a href="#">Shop</a>
             </span>
-            <h2>About Us</h2>
+            <h2>Shop</h2>
         </div>
       </div>
     </section>
@@ -60,107 +60,7 @@
         <a href="#" class="fas fa-blog"></a>
         <a href="#" class="fa-solid fa-address-book"></a>
     </nav>
-    <!-- start featurePrice -->
-    <div class="featurePrice">
-      <div class="container">
-        <img src="image/human.png" alt="priceFeature">
-        <div class="featurePrice__text">
-            <h2>WE Give The Lowest Price on Grocery Items</h2>
-            <p>Neque porro quisquam est aui dolorem iesum ruia dolor
-                sit amet, consectetur, adipisci velit, sed quia non numua
-                eius modi tempora incidunt ut labore et dolore magnam
-                volutatem exercitationem ullam.</p>
-            <p class="p-s">Quis autem vel eum iure reprehenderit aui in ea voluptae
-                velit esse quam nihil molestiae consequatur, vel illum rui
-                dolorem eum fugiat quo voluptas excepteur deserunt
-                veniam adipisicing do adipisicing adipisicing proident
-                esse aud irure commodo mollit voluptate irure alorem
-                consequat ullamco do laboris.</p>
-        </div>
-      </div>
-    </div>
-        <!-- start Our Vision -->
-        <div class="our">
-          <div class="container">
-              <div class="box">
-                  <img src="image/hand.png" alt="ourVision">
-                  <h2>Our Vision</h2>
-                  <p>Neque porro quisquam est aui dolorem iesum ruia
-                      sit amet, consectetur, adipisci velit, sed quia non
-                      eius modi tempora incidunt ut labore et dolore ma
-                      volutatem exercitationem ullam.</p>
-                  <a href="erroe.html" class="btn">Shop Now</a>
-              </div>
-              <div class="box">
-                  <img src="image/arrow.png" alt="OurGoal">
-                  <h2>Our Goal</h2>
-                  <p>Neque porro quisquam est aui dolorem iesum ruia
-                      sit amet, consectetur, adipisci velit, sed quia non
-                      eius modi tempora incidunt ut labore et dolore ma
-                      volutatem exercitationem ullam.</p>
-                  <a href="erroe.html" class="btn">Shop Now</a>
-              </div>
-          </div>
-      </div>
-      <!-- start video  -->
-      <div class="video">
-        <div class="container">
-            <div class="video__box">
-                <video autoplay muted loop>
-                    <source src="image/videoFood.mp4">
-                </video>
-                <img src="image/iconYoutube.png" alt="PlayIcon">
-            </div>
-        </div>
-    </div>
-    <!-- finish Page -->
-    <div class="featuer">
-      <div class="container">
-        <div class="featuer__col">
-          <div class="featuer__box">
-            <img src="image/medal.png" alt="feature" />
-            <h3>Quality Products</h3>
-            <p>
-              Aui dolorem iesum ruia dolor sit amet, consectetur, adipisci eius
-              modi incidunt
-            </p>
-          </div>
-          <div class="featuer__box">
-            <img src="image/bikeDelivery.png" alt="feature" />
-            <h3>Fast Delivery</h3>
-            <p>
-              Aui dolorem iesum ruia dolor sit amet, consectetur, adipisci eius
-              modi incidunt
-            </p>
-          </div>
-        </div>
-        <div class="featuer__col">
-          <div class="featuer__box">
-            <img src="image/bagFruites.png" alt="feature" class="img-app" />
-          </div>
-          <div class="featuer__box">
-            <a href="erroe.html" class="btn">Shop Now</a>
-          </div>
-        </div>
-        <div class="featuer__col">
-          <div class="featuer__box">
-            <img src="image/bagshop.png" alt="feature" />
-            <h3>Online Order</h3>
-            <p>
-              Aui dolorem iesum ruia dolor sit amet, consectetur, adipisci eius
-              modi incidunt
-            </p>
-          </div>
-          <div class="featuer__box">
-            <img src="image/contact.png" alt="feature" />
-            <h3>24/7 Service</h3>
-            <p>
-              Aui dolorem iesum ruia dolor sit amet, consectetur, adipisci eius
-              modi incidunt
-            </p>
-          </div>
-        </div>
-      </div>
+    
     </div>
     <div class="best-seller">
       <div class="container">
