Creat page erorr

--- a/shope.html
+++ b/shope.html
@@ -419,7 +419,7 @@
         </div>
       </div>
     </div>
-    <!-- sponser -->
+    <!-- sponsor -->
     <marquee class="sponsor">
         <div class="container">
             <img src="image/Logo's.png" alt="sponser">
@@ -488,5 +488,6 @@
             </div>
         </div>
     </footer>
+    <script src="script/main.js"></script>
   </body>
 </html>
