--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
               <li><a href="index.html">Home</a></li>
               <li><a href="about.html">About</a></li>
               <li><a href="shope.html">Shope</a></li>
-              <li><a href="page.html">Page</a></li>
+              <li><a href="erorr.html">Page</a></li>
               <li><a href="blog.html">Blog</a></li>
               <li><a href="contact">Contact</a></li>
             </ul>
